Don't use fopen_s().
It always opens the file with "deny all" sharing on Windows; we don't
want that, because we want UN*X semantics, with "deny none" sharing -
that's what people expect.

We'll squelch the warnings later; fopen() does the same parameter
checking that fopen_s() does, it doesn't return an errno value but it
probably sets errno and errno is probably thread-safe (inferred from
Microsoft's documentation), and we don't *want* the "security" offered
by opening the file "deny all", so the only thing we don't want is the
warnings.

--- a/Makefile.in
+++ b/Makefile.in
@@ -91,7 +91,7 @@ FSRC =  @V_FINDALLDEVS@
 SSRC =  @SSRC@
 CSRC =	pcap.c gencode.c optimize.c nametoaddr.c etherent.c \
 	fmtutils.c \
-	savefile.c sf-pcap.c sf-pcapng.c fopen.c pcap-common.c \
+	savefile.c sf-pcap.c sf-pcapng.c pcap-common.c \
 	bpf_image.c bpf_dump.c
 GENSRC = scanner.c grammar.c bpf_filter.c
 LIBOBJS = @LIBOBJS@
@@ -126,7 +126,6 @@ HDR = $(PUBHDR) \
 	ethertype.h \
 	extract.h \
 	fmtutils.h \
-	fopen.h \
 	ftmacros.h \
 	gencode.h \
 	ieee80211.h \
