--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,5 +19,5 @@ install:
 build_script:
   - md build
   - cd build
-  - cmake -DPACKET_DLL_DIR=c:\projects\libpcap\Win32\WpdPack -G"Visual Studio 12 2013" ..
+  - cmake -DCMAKE_PREFIX_PATH=c:\projects\libpcap\Win32\WpdPack -G"Visual Studio 12 2013" ..
   - msbuild -nologo -p:Configuration=Release pcap.sln
