Fix check for getaddrinfo() on Windows.
The thing I love about CMake is that it's so consistent about the way
you say "this test needs these header files" and "this test needs these
libraries" - you can do both with arguments to the test!

Oh, wait, you can't....

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -375,7 +375,10 @@ if(WIN32)
     #
     # We need winsock2.h and ws2tcpip.h.
     #
-    check_symbol_exists(ws2_32 getaddrinfo "winsock2.h;ws2tcpip.h" LIBWS2_32_HAS_GETADDRINFO)
+    cmake_push_check_state()
+    set(CMAKE_REQUIRED_LIBRARIES ws2_32)
+    check_symbol_exists(getaddrinfo "winsock2.h;ws2tcpip.h" LIBWS2_32_HAS_GETADDRINFO)
+    cmake_pop_check_state()
     if(LIBWS2_32_HAS_GETADDRINFO)
         set(PCAP_LINK_LIBRARIES socket nsl ${PCAP_LINK_LIBRARIES})
     else(LIBWS2_32_HAS_GETADDRINFO)
