Add ws2_32, not socket and nsl, if ws2_32 has getaddrinfo().

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -380,7 +380,7 @@ if(WIN32)
     check_symbol_exists(getaddrinfo "winsock2.h;ws2tcpip.h" LIBWS2_32_HAS_GETADDRINFO)
     cmake_pop_check_state()
     if(LIBWS2_32_HAS_GETADDRINFO)
-        set(PCAP_LINK_LIBRARIES socket nsl ${PCAP_LINK_LIBRARIES})
+        set(PCAP_LINK_LIBRARIES ws2_32 ${PCAP_LINK_LIBRARIES})
     else(LIBWS2_32_HAS_GETADDRINFO)
         message(FATAL_ERROR "getaddrinfo is required, but wasn't found")
     endif(LIBWS2_32_HAS_GETADDRINFO)
