Rename the test program directory to testprogs.
We may have a directory of test files in the future, and we'd want to
call it "tests", paralleling tcpdump's directory of test files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1774,7 +1774,7 @@ if(WIN32)
     set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} ${pcap_SOURCE_DIR}/pcap-dll.rc)
 endif(WIN32)
 
-add_subdirectory(tests)
+add_subdirectory(testprogs)
 
 ######################################
 # Register targets
