Add a libpcap test file.
This was a tcpdump test file, which happened to have a too-long option
in the SHB; libpcap currently ignores options, so it doesn't currently
have a problem with it, but if we add APIs to more fully support pcapng,
a program that looks at SHB options will have to get an error indication
from libpcap.

--- a/Makefile.in
+++ b/Makefile.in
@@ -375,6 +375,7 @@ EXTRA_DIST = \
 	testprogs/threadsignaltest.c \
 	testprogs/unix.h \
 	testprogs/valgrindtest.c \
+	tests/shb-option-too-long.pcapng \
 	Win32/Prj/wpcap.sln \
 	Win32/Prj/wpcap.vcxproj \
 	Win32/Prj/wpcap.vcxproj.filters
