--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,5 +19,6 @@ install:
 build_script:
   - md build
   - cd build
+  - type NUL >.devel
   - cmake -DCMAKE_PREFIX_PATH=c:\projects\libpcap\Win32\WpdPack -G"Visual Studio 12 2013" ..
   - msbuild -nologo -p:Configuration=Release pcap.sln
