In fact, we don't need the compiler to warn about inlining at all.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1564,9 +1564,10 @@ if(EXISTS ${CMAKE_SOURCE_DIR}/.devel)
         #
         # Disable some pointless warnings that /Wall turns on.
         #
-        # We do *not* care whether some function is going to be
+        # We do *not* care whether some function is, or isn't, going to be
         # expanded inline.
         #
+        check_and_add_compiler_option(-wd4710)
         check_and_add_compiler_option(-wd4711)
         #
         # We do *not* care whether we're adding padding bytes after
