--- a/testprogs/CMakeLists.txt
+++ b/testprogs/CMakeLists.txt
@@ -8,8 +8,10 @@ add_custom_target(testprogs)
 macro(add_test_executable _executable)
   add_executable(${_executable} EXCLUDE_FROM_ALL
     ${_executable}.c ${PROJECT_SOURCE_LIST_WIN32_C})
-  set_target_properties(${_executable} PROPERTIES
-    COMPILE_FLAGS ${C_ADDITIONAL_FLAGS})
+  if(NOT C_ADDITIONAL_FLAGS STREQUAL "")
+    set_target_properties(${_executable} PROPERTIES
+      COMPILE_FLAGS ${C_ADDITIONAL_FLAGS})
+  endif()
   if(WIN32)
     target_link_libraries(${_executable}
       ${ARGN} ${LIBRARY_NAME} ${PCAP_LINK_LIBRARIES})
