--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1669,6 +1669,7 @@ if(EXISTS ${CMAKE_SOURCE_DIR}/.devel OR EXISTS ${CMAKE_BINARY_DIR}/.devel)
         check_and_add_compiler_option(-Wshadow)
         check_and_add_compiler_option(-Wdeclaration-after-statement)
         check_and_add_compiler_option(-Wused-but-marked-unused)
+        check_and_add_compiler_option(-Wdocumentation)
     endif()
 endif()
 
