Add -Wcomma and fix the single place it complains about
Signed-off-by: Joerg Mayer <jmayer@loplof.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1670,6 +1670,7 @@ if(EXISTS ${CMAKE_SOURCE_DIR}/.devel OR EXISTS ${CMAKE_BINARY_DIR}/.devel)
         check_and_add_compiler_option(-Wdeclaration-after-statement)
         check_and_add_compiler_option(-Wused-but-marked-unused)
         check_and_add_compiler_option(-Wdocumentation)
+        check_and_add_compiler_option(-Wcomma)
     endif()
 endif()
 
