Add support for running rpcapd from inetd and inetd-alikes.
When run from inetd and programs that support inetd-style program
launching (xinetd, launchd, systemd, ...), we don't do a
connection-accept loop; we're handed the input side of the connection as
the standard input and the output side of the connection as the standard
output, and should dive right into the service loop.

We extract the initial connection initialization and cleanup stuff from
daemon_serviceloop() and put it into the code that calls the service
loop, in rpcapd.c; it's different in the four cases where we start a
service loop (accepted connection on UN*X, accepted connection on
Windows, run from inetd, active mode), so that cleans up
daemon_serviceloop() a bit.

Supply a sample launchd plist; we could also supply examples of inetd
and xinetd config file entries, and systemd units.

--- a/Makefile.in
+++ b/Makefile.in
@@ -303,6 +303,7 @@ EXTRA_DIST = \
 	msdos/readme.dos \
 	nomkdep \
 	org.tcpdump.chmod_bpf.plist \
+	org.tcpdump.rpcapd.plist \
 	pcap-bpf.c \
 	pcap-bt-linux.c \
 	pcap-bt-linux.h \
@@ -351,6 +352,7 @@ EXTRA_DIST = \
 	rpcap-protocol.c \
 	rpcapd/CMakeLists.txt \
 	rpcapd/Makefile.in \
+	rpcapd/config_params.h \
 	rpcapd/daemon.h \
 	rpcapd/daemon.c \
 	rpcapd/fileconf.c \
