Add a minimalistic manpage for rpcapd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2037,7 +2037,7 @@ function(install_manpage_symlink SOURCE TARGET MANDIR)
             if(LINK_EXECUTABLE)
                 set(LINK_COMMAND "\"${LINK_EXECUTABLE}\" \"-s\" \"${SOURCE}\" \"${TARGET}\"")
             else(LINK_EXECUTABLE)
-                message(FATAL_ERROR "ln (http://pubs.opengroup.org/onlinepubs/9699919799/utilities/ln.html) not find.")
+                message(FATAL_ERROR "ln (http://pubs.opengroup.org/onlinepubs/9699919799/utilities/ln.html) not found.")
             endif(LINK_EXECUTABLE)
     else(MINGW)
         set(LINK_COMMAND "\"${CMAKE_COMMAND}\" \"-E\" \"create_symlink\" \"${SOURCE}\" \"${TARGET}\"")
