--- a/configure.ac
+++ b/configure.ac
@@ -1548,7 +1548,7 @@ fi
 DYEXT="none"
 MAN_FILE_FORMATS=5
 MAN_MISC_INFO=7
-MAN_USERMOD_SECTION=8
+MAN_ADMIN_COMMANDS=8
 case "$host_os" in
 
 aix*)
@@ -1802,7 +1802,7 @@ solaris*)
 		#
 		# Use System V conventions for man pages.
 		#
-		MAN_USERMOD_SECTION=1m
+		MAN_ADMIN_COMMANDS=1m
 		MAN_FILE_FORMATS=4
 		MAN_MISC_INFO=5
 	esac
@@ -1880,7 +1880,7 @@ AC_SUBST(SSRC)
 AC_SUBST(DYEXT)
 AC_SUBST(MAN_FILE_FORMATS)
 AC_SUBST(MAN_MISC_INFO)
-AC_SUBST(MAN_USERMOD_SECTION)
+AC_SUBST(MAN_ADMIN_COMMANDS)
 AC_SUBST(PTHREAD_LIBS)
 AC_SUBST(BUILD_RPCAPD)
 AC_SUBST(INSTALL_RPCAPD)
